Fix menu display on mobile

--- a/src/features/navigation/Layout.module.css
+++ b/src/features/navigation/Layout.module.css
@@ -26,12 +26,7 @@
     padding-left: 12px !important;
   }
 
-  .layout > header ul > li {
+  .layout > header ul > li.sm-hide {
     display: none !important;
-  }
-
-  .layout > header ul > li.logo,
-  .layout > header ul > li.login {
-    display: inline-block !important;
   }
 }
